--- a/HomeApp/HomeApp/Pages/LoginPage.xaml
+++ b/HomeApp/HomeApp/Pages/LoginPage.xaml
@@ -3,11 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:HomeApp.Pages"
              x:Class="HomeApp.Pages.LoginPage">
-    <ContentPage.Content>
-        <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-            <Label Text="HomeApp - Ваш умный дом" FontSize="Title" Padding="30,10,30,10" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-            <Button x:Name="loginButton" Text="{x:Static local:Pages.LoginPage.BUTTON_TEXT}" Clicked="Login_Click" CornerRadius="{local:ButtonViewExtension ButtonStyle=Round}"/>
-            <Label x:Name="errorMessage" FontSize="Small" TextColor="Red" Padding="30,10,30,10" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+        <StackLayout VerticalOptions="Center" HorizontalOptions="Center" x:Name="stackLayout">
+            <Label Text="HomeApp - Ваш умный дом" FontSize="Title" Padding="30,10,30,10"
+                   VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+            <Button x:Name="loginButton" Text="{x:Static local:LoginPage.BUTTON_TEXT}"
+                    Clicked="Login_Click" CornerRadius="{local:ButtonViewExtension ButtonStyle=Round}"/>
         </StackLayout>
-    </ContentPage.Content>
 </ContentPage>
