--- a/HomeApp/HomeApp/Pages/LoginPage.xaml
+++ b/HomeApp/HomeApp/Pages/LoginPage.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:HomeApp.Pages"
              x:Class="HomeApp.Pages.LoginPage">
-        <StackLayout VerticalOptions="Center" HorizontalOptions="Center" x:Name="stackLayout">
-            <Label Text="HomeApp - Ваш умный дом" FontSize="Title" Padding="30,10,30,10"
+    <StackLayout VerticalOptions="Center" HorizontalOptions="Center" x:Name="stackLayout">
+        <Label Text="HomeApp - Ваш умный дом" FontSize="Title" Padding="30,10,30,10"
                    VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-            <Button x:Name="loginButton" Text="{x:Static local:LoginPage.BUTTON_TEXT}"
+        <Button x:Name="loginButton" Text="{x:Static local:LoginPage.BUTTON_TEXT}"
                     Clicked="Login_Click" CornerRadius="{local:ButtonViewExtension ButtonStyle=Round}"/>
-        </StackLayout>
+        <Label x:Name="infoMessage" FontSize="Small" TextColor="Red" Padding="30,10,30,10" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+    </StackLayout>
 </ContentPage>
